--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: devlopr
-subtitle: A Jekyll Theme Built for Developers
+title: hoftherosedotcom
+subtitle: Portforlio for Hector de la Rosa Prado
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a Jekyll Theme Built For Developers
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://hoftherose.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
@@ -12,45 +12,39 @@ urls:
       url: /
     - text: Blog
       url: /blog
-    - text: Gallery
-      url: /gallery
-    - text: Shop
-      url : /shop
+    - text: Portfolio
+      url: /portfolio
     - text: Contact Me
       url : /contact
-    - text: Styleguide
-      url: /styleguide
-    - text: Get Started
-      url: /get-started
 
 # Edit these details
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hello, My Name is John Doe. I love to Code and Design. devlopr-jekyll is a theme built for developers.
-author_email: "johndoe@gmail.com"
-author_location: India
-author_website_url: "http://johndoe.com"
+author: Hector de la Rosa Prado
+author_bio: University student currently enrolled in the UNAM Mexico. Interested in machine and deep learning research and applications.
+author_email: "hoftherose@gmail.com"
+author_location: Mexico
+author_website_url: "http://hoftherose.github.io"
 
 author_work_experiences:
-            - company_name: Google
-              company_logo: google.png
-              company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
+            - company_name: National Autonomous University of Mexico ENES Morelia
+              company_logo: unam.png
+              company_url: http://www.enesmorelia.unam.mx/
+              designation: Teachers Assitant
+              description: Evaluated assignments and gave lectures on various subjects like Formal Automata Theory, Linear Algebra and Deep Learning 
               visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
+            - company_name: Mexican Math Olympiad for Basic Education, Morelia (OMMEB)
+              company_logo: ommeb.png
               company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
+              designation: State Delegate
+              description: Planning courses and gathering funding for the state competition.
               visibility: true
 
 author_education_details:
-              - college_logo: mit.png
-                college_name: MIT
-                college_url: https://mit.org
-                college_degree: CS Engineer
+              - college_logo: unam.png
+                college_name: UNAM ENES Morelia
+                college_url: https://www.enesmorelia.unam.mx/
+                college_degree: IT in Science
                 description: Bachelor of Technology
                 visibility: true
 
@@ -67,28 +61,24 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: johndoe
-github_username:  johndoe
-facebook_username: johndoe
-linkedin_username: johndoe
-behance_username: johndoe
-instagram_username: johndoe
-medium_username: johndoe
-telegram_username: johndoe
-dribbble_username: johndoe
-flickr_username: johndoe
+twitter_username:   hoftherose
+github_username:    hoftherose
+gitlab_username:    hoftherose
+bitbucket_username: hoftherose
+facebook_username:  hoftherose
+linkedin_username:  hoftherose
 
 #for comments using disqus
-disqus_shortname: sujay-kundu
+disqus_shortname: hoftherose
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+wakatime_username: hoftherose
 
 # mailchimp embedded form url (newsletter):
 mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # formspree (contact form)
-formspree_email: johndoe@gmail.com
+formspree_email: hoftherose@gmail.com
 
 # syntax highlighter
 markdown: kramdown
@@ -96,7 +86,7 @@ highlighter: rouge
 permalink: pretty
 
 # google analytics
-google_analytics: UA-46783401-10
+google_analytics: UA-158631044-2
 
 # Choose what to show ( can be true or false)
 show_author_work_experiences: true
@@ -105,11 +95,11 @@ show_author_project_details: true
 
 # algolia search
 algolia:
-  application_id: D9WA1YKTRQ
-  index_name: blog_posts # You can replace that with whatever name you want
+  application_id: OXKDLZ60QW
+  index_name: site # You can replace that with whatever name you want
   files_to_exclude: []
   nodes_to_index: 'article'
-  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
+  search_only_api_key: a1102632d8a723715dbf610f0b871aed
 
 # pagination of posts
 paginate: 4
@@ -132,15 +122,11 @@ paginate_path: "/blog/page/:num/"
 #   permalinks:
 #     category: '/category/:name/'
 
-# Shop
-collections:
- - products
-
-# Gallery
+# Portfolio
 defaults:
   -
     scope:
-      path: "gallery"
+      path: "portfolio"
     values:
       permalink: /:path/:basename:output_ext
 
