--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: devlopr
-subtitle: A Jekyll Theme Built for Developers
+title: Hector de la Rosa Prado
+subtitle: Resume page
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a Jekyll Theme Built For Developers
+  Get to know me a bit more, and checkout my projects while you're here!
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "www.hoftherose.com" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 urls:
@@ -125,10 +125,6 @@ paginate_path: "/blog/page/:num/"
 #   layout: archive
 #   permalinks:
 #     category: '/category/:name/'
-
-# Shop
-collections:
- - products
 
 # Gallery
 defaults:
