--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ flickr_username: hoftherose
 disqus_shortname: sujay-kundu
 
 # wakatime username (coding activity)
-wakatime_username: sujaykundu777
+wakatime_username: hoftherose
 
 # mailchimp embedded form url (newsletter):
 mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
@@ -90,7 +90,7 @@ highlighter: rouge
 permalink: pretty
 
 # google analytics
-google_analytics: UA-46783401-10
+google_analytics: UA-158631044-2
 
 # Choose what to show ( can be true or false)
 show_author_work_experiences: true
@@ -99,11 +99,11 @@ show_author_project_details: true
 
 # algolia search
 algolia:
-  application_id: D9WA1YKTRQ
-  index_name: blog_posts # You can replace that with whatever name you want
+  application_id: OXKDLZ60QW
+  index_name: site # You can replace that with whatever name you want
   files_to_exclude: []
   nodes_to_index: 'article'
-  search_only_api_key: 58ffdd7cd6c45ec1577a7fcd789b1b9a
+  search_only_api_key: a1102632d8a723715dbf610f0b871aed
 
 # pagination of posts
 paginate: 4
