--- a/_config.yml
+++ b/_config.yml
@@ -73,16 +73,16 @@ dribbble_username: hoftherose
 flickr_username: hoftherose
 
 #for comments using disqus
-disqus_shortname: sujay-kundu
+disqus_shortname: 
 
 # wakatime username (coding activity)
 wakatime_username: hoftherose
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+mailchimp_form_url: 
 
 # formspree (contact form)
-formspree_email: hoftherose@gmail.com
+formspree_email: 
 
 # syntax highlighter
 markdown: kramdown
