Social Media Managing

--- a/_config.yml
+++ b/_config.yml
@@ -61,16 +61,16 @@ author_project_details:
                 visibility: true
 
 # social links
-twitter_username: hoftherose
+#twitter_username: hoftherose
 github_username:  hoftherose
 facebook_username: hoftherose
 linkedin_username: hoftherose
-behance_username: hoftherose
+#behance_username: hoftherose
 instagram_username: hoftherose
-medium_username: hoftherose
+#medium_username: hoftherose
 telegram_username: hoftherose
-dribbble_username: hoftherose
-flickr_username: hoftherose
+#dribbble_username: hoftherose
+#flickr_username: hoftherose
 
 #for comments using disqus
 disqus_shortname: 
