Stack Overflow User Data

--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,8 @@ github_username:  hoftherose
 facebook_username: hoftherose
 linkedin_username: hoftherose
 #behance_username: hoftherose
-instagram_username: hoftherose
+stackoverflow_username: 12782095/hoftherose
+#instagram_username: hoftherose
 #medium_username: hoftherose
 telegram_username: hoftherose
 #dribbble_username: hoftherose
